syntax = "proto3";

service DataNodeService {
    rpc StoreChunk(Chunk) returns(StoreChunkResponse) {}
}

message Chunk {
    string fileName = 1;
    int32 partNumber = 2;
    bytes content = 3;
}

message StoreChunkResponse {
    bool success = 1;
    string message = 2;
}
